--- a/app/src/main/res/layout/activity_todays_event.xml
+++ b/app/src/main/res/layout/activity_todays_event.xml
@@ -147,7 +147,7 @@
                 android:layout_height="60dp"
                 android:layout_marginEnd="40dp"
                 android:fontFamily="@font/pretendardsemibold"
-                android:text="메인홀로 이동"
+                android:text="이 행사장으로 이동"
                 android:textColor="#000000"
                 android:textSize="20sp"
                 app:backgroundTint="#FBFBFB"
