정훈님 메뉴 선택화면 노란색 버튼 파란색으로 변경

--- a/app/src/main/res/layout/select1p2p.xml
+++ b/app/src/main/res/layout/select1p2p.xml
@@ -84,7 +84,7 @@
                 android:id="@+id/p2_button"
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
-                android:backgroundTint="#FFDD57"
+                android:backgroundTint="#CFE2FF"
                 app:strokeColor="#CFCFCF"
                 app:strokeWidth="1dp"
                 app:cardCornerRadius="30dp"/>
