--- a/app/src/main/res/layout/gameselect.xml
+++ b/app/src/main/res/layout/gameselect.xml
@@ -89,7 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:background="@drawable/rounded_button"
-            android:backgroundTint="#FFDD57"
+            android:backgroundTint="#CFE2FF"
             app:strokeColor="#CFCFCF"
             app:strokeWidth="1dp"
             app:cardCornerRadius="30dp"/>
