--- a/app/src/main/res/layout/certification.xml
+++ b/app/src/main/res/layout/certification.xml
@@ -32,6 +32,16 @@
             android:textSize="20sp"
             android:textStyle="bold"
             />
+        <TextView
+            android:id="@+id/loadingtext"
+            android:layout_marginTop="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:text="로딩 중…"
+            android:textSize="20sp"
+            android:fontFamily="@font/pretendardregular"
+            />
         <ImageView
             android:id="@+id/qr"
             android:layout_width="150dp"
